- address warnings - remove unnecessary comment